--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,11 @@ FIREBASE_AUTH_URI=TU_AUTH_URI
 FIREBASE_TOKEN_URI=TU_TOKEN_URI
 FIREBASE_AUTH_CERT_URL=TU_AUTH_CERT_URL
 FIREBASE_CLIENT_CERT_URL=TU_CLIENT_CERT_URL
+
+PUBLIC_FIREBASE_API_KEY=
+PUBLIC_FIREBASE_AUTH_DOMAIN=
+PUBLIC_FIREBASE_PROJECT_ID=
+PUBLIC_FIREBASE_STORAGE_BUCKET=
+PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+PUBLIC_FIREBASE_APP_ID=
+PUBLIC_FIREBASE_MEASUREMENT_ID=
