--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/node": "^9.2.1",
+    "@astrojs/netlify": "^6.3.3",
     "@astrojs/solid-js": "^5.0.10",
     "@kobalte/core": "^0.13.9",
     "@tailwindcss/vite": "^4.1.6",
