--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^6.3.3",
-    "@astrojs/solid-js": "^5.0.10",
-    "@kobalte/core": "^0.13.9",
-    "@tailwindcss/vite": "^4.1.6",
-    "astro": "^5.7.13",
+    "@astrojs/netlify": "^6.3.4",
+    "@astrojs/solid-js": "^5.1.0",
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lint": "^6.8.5",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.37.1",
+    "@kobalte/core": "^0.13.10",
+    "@tailwindcss/vite": "^4.1.8",
+    "astro": "^5.8.2",
+    "codemirror": "^6.0.1",
     "date-fns": "^4.1.0",
-    "firebase": "^11.7.3",
+    "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
     "react-dropzone": "^14.3.8",
-    "solid-js": "^1.9.6",
-    "tailwindcss": "^4.1.6",
-    "zod": "^3.24.4",
+    "solid-js": "^1.9.7",
+    "tailwindcss": "^4.1.8",
+    "zod": "^3.25.51",
     "zod-form-data": "^2.0.7"
   },
   "devDependencies": {
